--- a/css/styles.css
+++ b/css/styles.css
@@ -651,7 +651,7 @@ img {
   left: 0;
   position: absolute;
   transition: transform var(--hover-anim);
-  transform: translateY(100%);
+  transform: translateY(101%);
   width: 100%;
   height: 100%;
 }
@@ -731,6 +731,7 @@ img {
   border: 1px solid var(--clients-color);
   border-radius: 4px;
   transition: var(--hover-anim);
+  outline: transparent;
 }
 .clients {
   transition: var(--hover-anim);
