--- a/scss/components/_social.scss
+++ b/scss/components/_social.scss
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   transition: background-color var(--hover-anim);
+  outline: transparent;
 
   &:hover,
   &:focus {
@@ -27,6 +28,7 @@
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   transition: background-color var(--hover-anim);
+  outline: transparent;
 
   &:hover,
   &:focus {
